openmediavault-docker-gui (0.2.12) UNRELEASED; urgency=low

  * Fix potential problem if base path is manually relocated
  * Simplify make process
  * Improved remove script

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Fri, 04 Sep 2015 22:24:22 +0200

openmediavault-docker-gui (0.2.11) unstable; urgency=low

  * Fix top bar buttons disable in grids on load

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Thu, 03 Sep 2015 21:56:06 +0200

openmediavault-docker-gui (0.2.10) unstable; urgency=low

  * Create folder required for base path relocation 

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Wed, 02 Sep 2015 18:40:19 +0200

openmediavault-docker-gui (0.2.9) unstable; urgency=low

  * Use bind mounts to relocate base path 

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Wed, 02 Sep 2015 16:56:37 +0200

openmediavault-docker-gui (0.2.8) unstable; urgency=low

  * Remove noexec option from fstab when relocating base path 

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Tue, 01 Sep 2015 22:48:39 +0200

openmediavault-docker-gui (0.2.7) unstable; urgency=low

  * Even better images search

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Mon, 31 Aug 2015 20:23:14 +0200

openmediavault-docker-gui (0.2.6) unstable; urgency=low

  * Fix Docker image search

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Mon, 31 Aug 2015 20:21:17 +0200

openmediavault-docker-gui (0.2.5) unstable; urgency=low

  * Fix conflicting class names
  * Use RootFolderBrowser provided by omv-extras

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Sun, 30 Aug 2015 18:54:54 +0200

openmediavault-docker-gui (0.2.4) unstable; urgency=low

  * Made it possible to create data containers
  * More PHP code fixes to follow coding standards
  * Made it possible to create a data volume 
  * Made it possible to specify volumes-from in a container